[project]
name = "pxollyapi"
version = "0.1.0"
description = "Библиотека для взаимодействия с API чат менеджера Pxolly"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
line-length=120

select = ["E", "F"]
ignore = ["E501"]
fixable = ["A", "B", "C", "D", "E", "F"]
exclude = [".venv", "__pycache__", ".git"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]